2006-04-27  Michal Nazarewicz  <mina86/AT/tlen.pl>

	* slack-desc: + new applications added

	* quotes.txt: + new quote from IRC

	* README: + justification fixed

	* Makefile: + mountiso and umountiso are installd in /usr/bin
	+ games are installed in /usr/local/games
	+ DEBUG added

	* mpd-show.c: + division by 0 when unknown total length bug fixed

2006-04-25  Michal Nazarewicz  <mina86/AT/tlen.pl>

	* extractlinks.pl: + supports '-' as standard input.
	+ supports multiple tags in --tag
	+ supports printing relative links

2006-04-19  Michal Nazarewicz  <mina86/AT/tlen.pl>

	* installkernel.8: + few typos corrected
	+ '--arch=-' and '--nice=!<value>' options documented
	+ Note when '--tidy' is not recommedned added
	+ global hook scripts now in /etc/installkernel.d/global

	* installkernel: + `ps -p` replaced with `kill -0`
	+ checking for another instance with `ps -C` added
	+ '--arch=-' option added
	+ '--nice=!<value>' option added
	+ uses `renice` instead of `nice` now
	+ global hook scripts now in /etc/installkernel.d/global

2006-03-27  Michal Nazarewicz  <mina86/AT/tlen.pl>

	* installkernel: + bug with tr introduced in prev. ver. fixed

2006-03-27  Michal Nazarewicz  <mina86/AT/tlen.pl>

	* installkernel, mp3rip: + ranges in tr replaced with listed values

	* quotes.txt: + The Godfather quotes added
	+ Randy Keith Milholland quotes added

2006-02-04  Michal Nazarewicz  <mina86/AT/tlen.pl>

	* mpd-show.c: + exit(1) on second signal in signal handler.
	+ caches fewer number of signals (SIGHUP, SIGINT, SIGQUIT
	  and SIGWINCH which is ignored) instead of all signals.

	* mp3rip: + --config option added as synonym of --setup

2005-12-07  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* quotes.txt: + quote by Plato added

2005-12-05  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* mpd-show.c: + tiny bug fixed
	* mpd-show-wrapper.sh: + may be called with argument instead of $0

	* mpd-show.c: + song_t structure removed
	+ buffer is recreated only on song change